@@ -26,13 +26,12 @@ import com.velocitypowered.api.util.GameProfile;
 import com.velocitypowered.proxy.connection.MinecraftConnection;
 import com.velocitypowered.proxy.connection.client.ConnectedPlayer;
 import com.velocitypowered.proxy.console.VelocityConsole;
-import com.velocitypowered.proxy.protocol.packet.RemovePlayerInfo;
-import com.velocitypowered.proxy.protocol.packet.UpsertPlayerInfo;
+import com.velocitypowered.proxy.protocol.packet.RemovePlayerInfoPacket;
+import com.velocitypowered.proxy.protocol.packet.UpsertPlayerInfoPacket;
 import com.velocitypowered.proxy.protocol.packet.chat.ComponentHolder;
 import com.velocitypowered.proxy.protocol.packet.chat.RemoteChatSession;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.Map;
@@ -94,8 +93,10 @@ public class VelocityTabList implements InternalTabList {
           entry1.getLatency(), entry1.getGameMode(), entry1.getChatSession(), entry1.isListed());
     }
 
-    EnumSet<UpsertPlayerInfo.Action> actions = EnumSet.noneOf(UpsertPlayerInfo.Action.class);
-    UpsertPlayerInfo.Entry playerInfoEntry = new UpsertPlayerInfo.Entry(entry.getProfile().getId());
+    EnumSet<UpsertPlayerInfoPacket.Action> actions = EnumSet
+            .noneOf(UpsertPlayerInfoPacket.Action.class);
+    UpsertPlayerInfoPacket.Entry playerInfoEntry = new UpsertPlayerInfoPacket
+            .Entry(entry.getProfile().getId());
 
     Preconditions.checkNotNull(entry.getProfile(), "Profile cannot be null");
     Preconditions.checkNotNull(entry.getProfile().getId(), "Profile ID cannot be null");
@@ -109,7 +110,7 @@ public class VelocityTabList implements InternalTabList {
       }
       if (!Objects.equals(previousEntry.getDisplayNameComponent().orElse(null),
           entry.getDisplayNameComponent().orElse(null))) {
-        actions.add(UpsertPlayerInfo.Action.UPDATE_DISPLAY_NAME);
+        actions.add(UpsertPlayerInfoPacket.Action.UPDATE_DISPLAY_NAME);
         playerInfoEntry.setDisplayName(entry.getDisplayNameComponent().isEmpty()
                 ?
                 null :
@@ -118,32 +119,32 @@ public class VelocityTabList implements InternalTabList {
         );
       }
       if (!Objects.equals(previousEntry.getLatency(), entry.getLatency())) {
-        actions.add(UpsertPlayerInfo.Action.UPDATE_LATENCY);
+        actions.add(UpsertPlayerInfoPacket.Action.UPDATE_LATENCY);
         playerInfoEntry.setLatency(entry.getLatency());
       }
       if (!Objects.equals(previousEntry.getGameMode(), entry.getGameMode())) {
-        actions.add(UpsertPlayerInfo.Action.UPDATE_GAME_MODE);
+        actions.add(UpsertPlayerInfoPacket.Action.UPDATE_GAME_MODE);
         playerInfoEntry.setGameMode(entry.getGameMode());
       }
       if (!Objects.equals(previousEntry.isListed(), entry.isListed())) {
-        actions.add(UpsertPlayerInfo.Action.UPDATE_LISTED);
+        actions.add(UpsertPlayerInfoPacket.Action.UPDATE_LISTED);
         playerInfoEntry.setListed(entry.isListed());
       }
       if (!Objects.equals(previousEntry.getChatSession(), entry.getChatSession())) {
         ChatSession from = entry.getChatSession();
         if (from != null) {
-          actions.add(UpsertPlayerInfo.Action.INITIALIZE_CHAT);
+          actions.add(UpsertPlayerInfoPacket.Action.INITIALIZE_CHAT);
           playerInfoEntry.setChatSession(
               new RemoteChatSession(from.getSessionId(), from.getIdentifiedKey()));
         }
       }
     } else {
-      actions.addAll(EnumSet.of(UpsertPlayerInfo.Action.ADD_PLAYER,
-          UpsertPlayerInfo.Action.UPDATE_LATENCY,
-          UpsertPlayerInfo.Action.UPDATE_LISTED));
+      actions.addAll(EnumSet.of(UpsertPlayerInfoPacket.Action.ADD_PLAYER,
+          UpsertPlayerInfoPacket.Action.UPDATE_LATENCY,
+          UpsertPlayerInfoPacket.Action.UPDATE_LISTED));
       playerInfoEntry.setProfile(entry.getProfile());
       if (entry.getDisplayNameComponent().isPresent()) {
-        actions.add(UpsertPlayerInfo.Action.UPDATE_DISPLAY_NAME);
+        actions.add(UpsertPlayerInfoPacket.Action.UPDATE_DISPLAY_NAME);
         playerInfoEntry.setDisplayName(entry.getDisplayNameComponent().isEmpty()
                 ?
                 null :
@@ -152,24 +153,24 @@ public class VelocityTabList implements InternalTabList {
         );
       }
       if (entry.getChatSession() != null) {
-        actions.add(UpsertPlayerInfo.Action.INITIALIZE_CHAT);
+        actions.add(UpsertPlayerInfoPacket.Action.INITIALIZE_CHAT);
         ChatSession from = entry.getChatSession();
         playerInfoEntry.setChatSession(
             new RemoteChatSession(from.getSessionId(), from.getIdentifiedKey()));
       }
       if (entry.getGameMode() != -1 && entry.getGameMode() != 256) {
-        actions.add(UpsertPlayerInfo.Action.UPDATE_GAME_MODE);
+        actions.add(UpsertPlayerInfoPacket.Action.UPDATE_GAME_MODE);
         playerInfoEntry.setGameMode(entry.getGameMode());
       }
       playerInfoEntry.setLatency(entry.getLatency());
       playerInfoEntry.setListed(entry.isListed());
     }
-    this.connection.write(new UpsertPlayerInfo(actions, List.of(playerInfoEntry)));
+    this.connection.write(new UpsertPlayerInfoPacket(actions, List.of(playerInfoEntry)));
   }
 
   @Override
   public Optional<TabListEntry> removeEntry(UUID uuid) {
-    this.connection.write(new RemovePlayerInfo(List.of(uuid)));
+    this.connection.write(new RemovePlayerInfoPacket(List.of(uuid)));
     return Optional.ofNullable(this.entries.remove(uuid));
   }
 
@@ -190,7 +191,8 @@ public class VelocityTabList implements InternalTabList {
 
   @Override
   public void clearAll() {
-    this.connection.delayedWrite(new RemovePlayerInfo(new ArrayList<>(this.entries.keySet())));
+    this.connection.delayedWrite(new RemovePlayerInfoPacket(
+            new ArrayList<>(this.entries.keySet())));
     clearAllSilent();
   }
 
@@ -208,30 +210,30 @@ public class VelocityTabList implements InternalTabList {
   }
 
   @Override
-  public void processUpdate(UpsertPlayerInfo infoPacket) {
-    for (UpsertPlayerInfo.Entry entry : infoPacket.getEntries()) {
+  public void processUpdate(UpsertPlayerInfoPacket infoPacket) {
+    for (UpsertPlayerInfoPacket.Entry entry : infoPacket.getEntries()) {
       processUpsert(infoPacket.getActions(), entry);
     }
   }
 
-  protected UpsertPlayerInfo.Entry createRawEntry(VelocityTabListEntry entry) {
+  protected UpsertPlayerInfoPacket.Entry createRawEntry(VelocityTabListEntry entry) {
     Preconditions.checkNotNull(entry, "entry");
     Preconditions.checkNotNull(entry.getProfile(), "Profile cannot be null");
     Preconditions.checkNotNull(entry.getProfile().getId(), "Profile ID cannot be null");
-    return new UpsertPlayerInfo.Entry(entry.getProfile().getId());
+    return new UpsertPlayerInfoPacket.Entry(entry.getProfile().getId());
   }
 
-  protected void emitActionRaw(UpsertPlayerInfo.Action action, UpsertPlayerInfo.Entry entry) {
-    this.connection.write(
-        new UpsertPlayerInfo(EnumSet.of(action), Collections.singletonList(entry)));
+  protected void emitActionRaw(UpsertPlayerInfoPacket.Action action,
+                               UpsertPlayerInfoPacket.Entry entry) {
+    this.connection.write(new UpsertPlayerInfoPacket(EnumSet.of(action), List.of(entry)));
   }
 
-  private void processUpsert(EnumSet<UpsertPlayerInfo.Action> actions,
-      UpsertPlayerInfo.Entry entry) {
+  private void processUpsert(EnumSet<UpsertPlayerInfoPacket.Action> actions,
+      UpsertPlayerInfoPacket.Entry entry) {
     Preconditions.checkNotNull(entry.getProfileId(), "Profile ID cannot be null");
     UUID profileId = entry.getProfileId();
     VelocityTabListEntry currentEntry = this.entries.get(profileId);
-    if (actions.contains(UpsertPlayerInfo.Action.ADD_PLAYER)) {
+    if (actions.contains(UpsertPlayerInfoPacket.Action.ADD_PLAYER)) {
       if (currentEntry == null) {
         this.entries.put(profileId,
             currentEntry = new VelocityTabListEntry(
@@ -253,26 +255,26 @@ public class VelocityTabList implements InternalTabList {
           entry);
       return;
     }
-    if (actions.contains(UpsertPlayerInfo.Action.UPDATE_GAME_MODE)) {
+    if (actions.contains(UpsertPlayerInfoPacket.Action.UPDATE_GAME_MODE)) {
       currentEntry.setGameModeWithoutUpdate(entry.getGameMode());
     }
-    if (actions.contains(UpsertPlayerInfo.Action.UPDATE_LATENCY)) {
+    if (actions.contains(UpsertPlayerInfoPacket.Action.UPDATE_LATENCY)) {
       currentEntry.setLatencyWithoutUpdate(entry.getLatency());
     }
-    if (actions.contains(UpsertPlayerInfo.Action.UPDATE_DISPLAY_NAME)) {
+    if (actions.contains(UpsertPlayerInfoPacket.Action.UPDATE_DISPLAY_NAME)) {
       currentEntry.setDisplayNameWithoutUpdate(entry.getDisplayName() != null
           ? entry.getDisplayName().getComponent() : null);
     }
-    if (actions.contains(UpsertPlayerInfo.Action.INITIALIZE_CHAT)) {
+    if (actions.contains(UpsertPlayerInfoPacket.Action.INITIALIZE_CHAT)) {
       currentEntry.setChatSession(entry.getChatSession());
     }
-    if (actions.contains(UpsertPlayerInfo.Action.UPDATE_LISTED)) {
+    if (actions.contains(UpsertPlayerInfoPacket.Action.UPDATE_LISTED)) {
       currentEntry.setListedWithoutUpdate(entry.isListed());
     }
   }
 
   @Override
-  public void processRemove(RemovePlayerInfo infoPacket) {
+  public void processRemove(RemovePlayerInfoPacket infoPacket) {
     for (UUID uuid : infoPacket.getProfilesToRemove()) {
       this.entries.remove(uuid);
     }
